themes/mdb/assets/sass/components/_main.scss
main {
  @include container_section;

  article {
    header {
      width: auto;
      margin: 0;
      padding: 0;

      h1 {
        margin: $big_spacer 0 $big_spacer 0;
        border-top: $divider;
        padding-top: $big_spacer * 1.5;
        font-size: 250%;
      }
    }

    h2 {
      font-size: 200%;
      margin: $big_spacer 0;
    }

    h3 {
      font-size: 175%;
      margin: $big_spacer 0;
    }

    code {
      color: #c25;
      border: 1px solid #e1e1e8;
      padding: 0 3px;
      background: #f7f7f9;
      font-family: monospace;
      line-height: $line_height;
    }

    p code {
      font-size: 90%;
    }

    strong {
      font-weight: bold;
    }

    pre {
      padding: 20px;
      margin-bottom: $big_spacer;
      overflow: auto;
      background: #272822;

      &.mermaid {
        background: none;
        border: 1px solid #e1e1e8;

        svg {
          margin: 0 auto;
          display: block;
        }
      }

      code {
        color: #ededed;
        border: none;
        background: none;
        padding: 0;
        font-size: 130%;
      }
    }

    table {
      width: 100%;
      border-collapse: collapse;
      border: $divider;
      margin-bottom: $big_spacer;

      th,
      td {
        border: $divider;
        text-align: left;
        padding: 10px;
        font-size: 150%;

        pre {
          padding: 0;
          font-size: 60%;
        }
      }

      th {
        font-weight: bold;
      }
    }

    ul,
    ol {
      margin-bottom: $big_spacer;

      li {
        font-size: 150%;
        line-height: 1.75em;
        list-style-type: disc;
        margin-left: 1em;

        * {
          font-size: 100%;
        }

        code {
          font-size: 90%;
        }
      }
    }

    ol li {
      list-style-type: decimal;

      ul li {
        list-style-type: disc;
      }
    }

    p {
      font-size: 150%;
      line-height: 1.75em;
      margin-bottom: $big_spacer;

      * {
        font-size: 100%;
      }
    }

    blockquote {
      border-left: 5px solid $divider_color;
      padding-left: 10px;
    }

    a,
    a:visited {
      color: $link_color;
    }
  }
}

